integration_tests/src/snapshots/integration_tests__cnft_tests__mint_v2_set_collection_v2_from_one_to_another_collection__mint.snap
---
source: integration_tests/src/cnft_tests.rs
assertion_line: 904
expression: asset
---
{
  "interface": "V1_NFT",
  "id": "DBLxvRsN2awoW2ybGxuAupFxq5dna2CCXHqvv2MdfsM",
  "content": {
    "$schema": "https://schema.metaplex.com/nft1.0.json",
    "json_uri": "https://example.com/my-nft.json",
    "files": [],
    "metadata": {
      "name": "My NFT",
      "symbol": "",
      "token_standard": "NonFungible"
    },
    "links": {}
  },
  "authorities": [
    {
      "address": "5kid8ztEWECutQU7JM5FPRaroS8izAfYvg2dK6ymTgkP",
      "scopes": [
        "full"
      ]
    }
  ],
  "compression": {
    "eligible": false,
    "compressed": true,
    "data_hash": "7ZSz2MCu3F7ks9G9c1CyMJvkk4iPBbZMzaHTNZEWKWF7",
    "creator_hash": "EKDHSGbrGztomDfuiV4iqiZ6LschDJPsFiXjZ83f92Md",
    "collection_hash": "J3vrQFZxEeTcS9cSFiZi2NDmrXq7sXp1sXjM8knN4gYn",
    "asset_data_hash": "EKDHSGbrGztomDfuiV4iqiZ6LschDJPsFiXjZ83f92Md",
    "flags": 0,
    "asset_hash": "CRT2DDsXyGYhaMB8gR33SLpyFrfypBMhisAKw51HrvK8",
    "tree": "58Aiajw5nN4tye5BpXeC6gTusw4DDguuuE3mkKKXbdBu",
    "seq": 1,
    "leaf_id": 0
  },
  "grouping": [
    {
      "group_key": "collection",
      "group_value": "2aNJcrqdT8Y3MwUvPVTc5bKxxiiSJVMoaHH9RYVoUWZk",
      "verified": true
    }
  ],
  "royalty": {
    "royalty_model": "creators",
    "target": null,
    "percent": 0.055,
    "basis_points": 550,
    "primary_sale_happened": false,
    "locked": false
  },
  "creators": [],
  "ownership": {
    "frozen": false,
    "non_transferable": false,
    "delegated": false,
    "delegate": null,
    "ownership_model": "single",
    "owner": "4qCZuGhWujUR4aqA49zKWZgQHjj6skTa6pYWcLueWyR2"
  },
  "supply": {
    "print_max_supply": 0,
    "print_current_supply": 0,
    "edition_nonce": null
  },
  "mutable": true,
  "burnt": false
}
